clusters/uw1/dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service-uw1
  namespace: app1-uw1-dev
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: app1-uw1
